--- a/package.json
+++ b/package.json
@@ -19,14 +19,6 @@
   },
   "homepage": "https://github.com/sergiohfigorelle/Sjef-Music-Backend#readme",
   "dependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.12",
-    "@types/jest": "^26.0.23",
-    "@types/jsonwebtoken": "^8.5.3",
-    "@types/knex": "^0.16.1",
-    "@types/node": "^15.14.0",
-    "@types/uuid": "^8.3.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -35,9 +27,19 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.6",
     "mysql": "^2.18.1",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.3",
+    "@types/knex": "^0.16.1",
+    "@types/node": "^15.14.0",
+    "@types/uuid": "^8.3.1",
     "ts-jest": "^27.0.3",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.3.5",
-    "uuid": "^8.3.2"
+    "typescript": "^4.3.5"
   }
 }
